--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <a href="rss.xml">
+            <img src="rss.jpeg"
+            height="60px"
+            width="60px">
+           </a>
         <title>GLOOSITO</title>
         <link rel="stylesheet" href="estilo.css"></a>
-        <link rel="alternate" type="application/rss+xml" title="RSS de Gloosito" href="rss.xml">
-
     </head>
     <body>
         <header>
@@ -138,4 +141,6 @@
 
         <form action="" method="post">
     </body>
+        
 </html>
+
